--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Marion Sicard</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Qui suis-je</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projects">Projets</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#signup">Contacts</a></li>
                     </ul>
                 </div>
             </div>
@@ -38,9 +38,9 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-                        <a class="btn btn-primary" href="#about">Get Started</a>
+                        <h1 class="mx-auto my-0 text-uppercase">Zig-Zag</h1>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Alias "Doudou la crème chocolat que j'aime fort fort fort", Nounourss, La Grosse, Doudou. Oui, elle sait que c'est elle.</h2>
+                        <a class="btn btn-primary" href="#about">C'est parti !</a>
                     </div>
                 </div>
             </div>
@@ -50,11 +50,11 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Built with Bootstrap 5</h2>
+                        <h2 class="text-white mb-4"> Mais qu'est-ce que ce bince ? </h2>
                         <p class="text-white-50">
-                            Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-                            <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
-                            The theme is open source, and you can use it for any purpose, personal or commercial.
+                            Parce que c'est plus facile de parler de quelqu'un avec des photos et des vidéos... Let's Go !
+                            <a href="https://startbootstrap.com/theme/grayscale/">en savoir plus.</a>
+                            C'est MA chiennne. Elle n'est ni à vendre, ni à louer. Elle nous aime trop pour aller quelque part sans nous.
                         </p>
                     </div>
                 </div>
@@ -69,8 +69,8 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <h4>Déjà 10 ans de poils dans la maison </h4>
+                            <p class="text-black-50 mb-0">Et oui.. Déjà ! Elle est née le 1er décembre 2012 parmi une fraterie de 7 chiots. Nous avons fait sa rencontre chez Bernadette Ladauge. Si elle pouvait, elle nous aurait donné tous les chiots ! Si je vous parle d'elle, c'est parce que pour presque 900 000 habitants sur l'île de La Réunion, on compte 300 000 animaux abandonnés, soit un animal abandonné pour trois habitants. Un animal ne s'abandonne pas, ne se maltraite pas, ne vit pas au bout d'une laisse mais dans une maison remplie d'amour et de temps pour soigner et pour jouer !</p>
                         </div>
                     </div>
                 </div>
@@ -81,8 +81,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                    <h4 class="text-white">Sa mère</h4>
+                                    <p class="mb-0 text-white-50">Un malinois devenue aveugle suite aux coups de ces premiers maitres. Bernadette Ladauge l'a récupérée à la SPA pour éviter son euthanasie.</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -96,8 +96,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mountains</h4>
-                                    <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                                    <h4 class="text-white">Son père</h4>
+                                    <p class="mb-0 text-white-50">Un labrador abandonné par sa première famille. Il était à la SPA avant d'être recueilli par Bernadette Ladauge.</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
