--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Grayscale - Start Bootstrap Theme</title>
+        <title> Marion Sicard - Zig-Zag </title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -26,8 +26,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#about">Qui suis-je</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Projets</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Le bince</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projects">Les poils</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Contacts</a></li>
                     </ul>
                 </div>
@@ -39,7 +39,7 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Zig-Zag</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Alias "Doudou la crème chocolat que j'aime fort fort fort", Nounourss, La Grosse, Doudou. Oui, elle sait que c'est elle.</h2>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Alias "Doudou la crème chocolat", Nounourss, La Grosse, Doudou. </h2>
                         <a class="btn btn-primary" href="#about">C'est parti !</a>
                     </div>
                 </div>
@@ -52,9 +52,9 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4"> Mais qu'est-ce que ce bince ? </h2>
                         <p class="text-white-50">
-                            Parce que c'est plus facile de parler de quelqu'un avec des photos et des vidéos... Let's Go !
+                            Si je vous parle d'elle, c'est parce que pour presque 900 000 habitants sur l'île de La Réunion, on compte 300 000 animaux abandonnés, soit un animal abandonné pour trois habitants. Un animal ne s'abandonne pas, ne se maltraite pas, ne vit pas au bout d'une laisse mais dans une maison remplie d'amour et de temps pour soigner et pour jouer! 
                             <a href="https://startbootstrap.com/theme/grayscale/">en savoir plus.</a>
-                            C'est MA chiennne. Elle n'est ni à vendre, ni à louer. Elle nous aime trop pour aller quelque part sans nous.
+                            Parce que c'est plus facile de parler de quelqu'un avec des photos...   
                         </p>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Déjà 10 ans de poils dans la maison </h4>
-                            <p class="text-black-50 mb-0">Et oui.. Déjà ! Elle est née le 1er décembre 2012 parmi une fraterie de 7 chiots. Nous avons fait sa rencontre chez Bernadette Ladauge. Si elle pouvait, elle nous aurait donné tous les chiots ! Si je vous parle d'elle, c'est parce que pour presque 900 000 habitants sur l'île de La Réunion, on compte 300 000 animaux abandonnés, soit un animal abandonné pour trois habitants. Un animal ne s'abandonne pas, ne se maltraite pas, ne vit pas au bout d'une laisse mais dans une maison remplie d'amour et de temps pour soigner et pour jouer !</p>
+                            <p class="text-black-50 mb-0">Et oui.. Déjà ! Elle est née le 1er décembre 2012 parmi une fraterie de 7 chiots. Nous avons fait sa rencontre chez Bernadette Ladauge. Si elle pouvait, elle nous aurait donné tous les chiots ! Déjà 10 ans que notre porte d'entrée est ouverte parce que Madame n'aime pas les portes fermées, déjà 10 ans de jeux, de calins et de "Zig-Zag !" à pleine voix! </p>
                         </div>
                     </div>
                 </div>
@@ -81,8 +81,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Sa mère</h4>
-                                    <p class="mb-0 text-white-50">Un malinois devenue aveugle suite aux coups de ces premiers maitres. Bernadette Ladauge l'a récupérée à la SPA pour éviter son euthanasie.</p>
+                                    <h4 class="text-white">Génétique</h4>
+                                    <p class="mb-0 text-white-50"> Sa génitrice, un malinois devenue aveugle suite aux coups de ces premiers maitres. Son géniteur, un labrador abandonné par sa première famille. Ils étaient à la SPA sur la liste des chiens à euthanasier avant d'être recueilli par Bernadette Ladauge.</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -91,13 +91,13 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="../../../Desktop/Perso/Photos - Vidéos/Img ZIGZAG/" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="../../../Desktop/Perso/Photos - Vidéos/Img ZIGZAG/IMG_8419_resultat.jpg" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Son père</h4>
-                                    <p class="mb-0 text-white-50">Un labrador abandonné par sa première famille. Il était à la SPA avant d'être recueilli par Bernadette Ladauge.</p>
+                                    <h4 class="text-white">Caractère</h4>
+                                    <p class="mb-0 text-white-50"> Malgré sa peur maladive d'être abandonnée, elle est à la fois douce, joueuse, délicate avec les enfants et très bonne nageuse, elle est -surtout à été- aussi vive, rapide, énergique et avec un très bon flair. Un joli mélange qui nous fait oublier l'impressionnante quantité de poils qu'elle perd !</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
@@ -112,7 +112,7 @@
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+                        <h2 class="text-white mb-5"> Abonnez-vous pour plus d'histoires !</h2>
                         <!-- * * * * * * * * * * * * * * *-->
                         <!-- * * SB Forms Contact Form * *-->
                         <!-- * * * * * * * * * * * * * * *-->
@@ -158,9 +158,9 @@
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Address</h4>
+                                <h4 class="text-uppercase m-0">Adresse</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                                <div class="small text-black-50">64, rue du rêve wesh</div>
                             </div>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                                <div class="small text-black-50"><a href="#!">marionLsicard@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -178,9 +178,9 @@
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Phone</h4>
+                                <h4 class="text-uppercase m-0">Téléphone</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">+1 (555) 902-8832</div>
+                                <div class="small text-black-50">Que pour les intimes ... ;)</div>
                             </div>
                         </div>
                     </div>
