--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Caractère</h4>
-                                    <p class="mb-0 text-white-50"> Malgré sa peur maladive d'être abandonnée, elle est à la fois douce, joueuse, délicate avec les enfants et très bonne nageuse, elle est -surtout à été- aussi vive, rapide, énergique et avec un très bon flair. Un joli mélange qui nous fait oublier l'impressionnante quantité de poils qu'elle perd !</p>
+                                    <p class="mb-0 text-white-50"> Malgré sa peur maladive d'être abandonnée, elle est douce, joueuse, délicate avec les enfants et très bonne nageuse. Elle est -surtout à été- aussi vive, rapide, énergique et avec un très bon flair. Un joli mélange qui nous fait oublier l'impressionnante quantité de poils qu'elle perd !</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
