--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about">Le bince</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Les poils</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#signup">Les Contacts</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#signup">Les contacts</a></li>
                     </ul>
                 </div>
             </div>
